fixing beam: BeamModel, tests

--- a/source/notebooks/case_study_5_5.ipynb
+++ b/source/notebooks/case_study_5_5.ipynb
@@ -8,17 +8,15 @@
     "\n",
     "This case study uses the beam element introdced in Chapter 5 to model a micro-resonant transducer. The addition over the single-element derivation is that multiple beams are used, but since the geometry is still in the X-Y plane and the beams are not rotated, the only thing to do is to\n",
     "a) add more elements\n",
-    "b) assemble the global stiffness, and mass matrices utilizing the same techniques as in Chapter 4, e.g. Example 4.2.\n",
-    "\n",
-    "Due to the simplicity of the problem there is no model object written, all the necessary methods are free-floating in the beam module, variables are defined in the notebook.\n"
+    "b) assemble the global stiffness, and mass matrices utilizing the same techniques as in Chapter 4, e.g. Example 4.2.\n"
    ],
    "id": "78ee4e9891a11b82"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:02.230106Z",
-     "start_time": "2025-06-24T12:11:02.206919Z"
+     "end_time": "2025-06-25T03:15:05.623418Z",
+     "start_time": "2025-06-25T03:15:05.603142Z"
     }
    },
    "cell_type": "code",
@@ -39,8 +37,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:04.079123Z",
-     "start_time": "2025-06-24T12:11:02.230106Z"
+     "end_time": "2025-06-25T03:15:06.284270Z",
+     "start_time": "2025-06-25T03:15:05.638457Z"
     }
    },
    "cell_type": "code",
@@ -68,8 +66,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:05.092739Z",
-     "start_time": "2025-06-24T12:11:05.074547Z"
+     "end_time": "2025-06-25T03:15:06.717136Z",
+     "start_time": "2025-06-25T03:15:06.709865Z"
     }
    },
    "cell_type": "code",
@@ -101,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:05.140600Z",
-     "start_time": "2025-06-24T12:11:05.125820Z"
+     "end_time": "2025-06-25T03:15:06.738792Z",
+     "start_time": "2025-06-25T03:15:06.731937Z"
     }
    },
    "cell_type": "code",
@@ -124,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:05.197150Z",
-     "start_time": "2025-06-24T12:11:05.170833Z"
+     "end_time": "2025-06-25T03:15:06.908103Z",
+     "start_time": "2025-06-25T03:15:06.894690Z"
     }
    },
    "cell_type": "code",
@@ -208,8 +206,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:05.264525Z",
-     "start_time": "2025-06-24T12:11:05.247228Z"
+     "end_time": "2025-06-25T03:15:06.999276Z",
+     "start_time": "2025-06-25T03:15:06.988685Z"
     }
    },
    "cell_type": "code",
@@ -241,8 +239,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:11:07.868666Z",
-     "start_time": "2025-06-24T12:11:05.344536Z"
+     "end_time": "2025-06-25T03:15:07.582761Z",
+     "start_time": "2025-06-25T03:15:07.065328Z"
     }
    },
    "cell_type": "code",
@@ -265,7 +263,7 @@
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
       "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[7]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msource\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mutils\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m assemble_global_K, apply_boundary_conditions\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m K_global = \u001B[43massemble_global_K\u001B[49m\u001B[43m(\u001B[49m\u001B[43mND\u001B[49m\u001B[43m=\u001B[49m\u001B[43mND\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnodes\u001B[49m\u001B[43m=\u001B[49m\u001B[43mnodes\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43melements\u001B[49m\u001B[43m=\u001B[49m\u001B[43melements\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m      4\u001B[39m K_global, F = apply_boundary_conditions(ND=ND, supports=supports, K=K_global, F=F)\n\u001B[32m      6\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34massemble_M\u001B[39m():\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\modules\\FEM_Practical_Course\\source\\utils.py:60\u001B[39m, in \u001B[36massemble_global_K\u001B[39m\u001B[34m(ND, nodes, elements)\u001B[39m\n\u001B[32m     57\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m _id, element \u001B[38;5;129;01min\u001B[39;00m elements.items():\n\u001B[32m     58\u001B[39m     K_element = element.Ke  \u001B[38;5;66;03m# Global stiffness matrix for the element\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m60\u001B[39m     dof_indices = \u001B[43melement\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdof_indices\u001B[49m  \u001B[38;5;66;03m# Use the pre-set DOF indices for the element\u001B[39;00m\n\u001B[32m     61\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     62\u001B[39m         \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     63\u001B[39m             \u001B[38;5;66;03m# add the i,j element of the local stiffness matrix to the element of the global stiffness matrix defined by the global dof indices.\u001B[39;00m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\modules\\FEM_Practical_Course\\source\\utils.py:61\u001B[39m, in \u001B[36massemble_global_K\u001B[39m\u001B[34m(ND, nodes, elements)\u001B[39m\n\u001B[32m     58\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m _id, element \u001B[38;5;129;01min\u001B[39;00m elements.items():\n\u001B[32m     59\u001B[39m     K_element = element.Ke  \u001B[38;5;66;03m# Global stiffness matrix for the element\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m61\u001B[39m     dof_indices = \u001B[43melement\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdof_indices\u001B[49m  \u001B[38;5;66;03m# Use the pre-set DOF indices for the element\u001B[39;00m\n\u001B[32m     62\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     63\u001B[39m         \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     64\u001B[39m             \u001B[38;5;66;03m# add the i,j element of the local stiffness matrix to the element of the global stiffness matrix defined by the global dof indices.\u001B[39;00m\n",
       "\u001B[31mAttributeError\u001B[39m: 'BeamElement' object has no attribute 'dof_indices'"
      ]
     }
