--- a/source/notebooks/example_4_2.ipynb
+++ b/source/notebooks/example_4_2.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:07.814083Z",
-     "start_time": "2025-06-24T12:13:07.721398Z"
+     "end_time": "2025-06-25T07:07:24.423896Z",
+     "start_time": "2025-06-25T07:07:24.337368Z"
     }
    },
    "cell_type": "code",
@@ -46,13 +46,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.074676Z",
-     "start_time": "2025-06-24T12:13:08.068190Z"
+     "end_time": "2025-06-25T07:07:24.678015Z",
+     "start_time": "2025-06-25T07:07:24.670533Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "dimensionality = 2 # Set to 3 for a 3D truss, 2 for a 2D truss\n",
+    "dimensionality = 3 # Set to 3 for a 3D truss, 2 for a 2D truss\n",
     "\n",
     "if dimensionality == 3:\n",
     "    # 3D nodes\n",
@@ -92,8 +92,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.107674Z",
-     "start_time": "2025-06-24T12:13:08.100017Z"
+     "end_time": "2025-06-25T07:07:24.710643Z",
+     "start_time": "2025-06-25T07:07:24.701328Z"
     }
    },
    "cell_type": "code",
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model has 2 degrees of freedom per node.\n"
+      "The model has 3 degrees of freedom per node.\n"
      ]
     }
    ],
@@ -145,8 +145,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.127841Z",
-     "start_time": "2025-06-24T12:13:08.122226Z"
+     "end_time": "2025-06-25T07:07:24.736295Z",
+     "start_time": "2025-06-25T07:07:24.729693Z"
     }
    },
    "cell_type": "code",
@@ -160,9 +160,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node 0: coords:[0 0]\n",
-      "Node 1: coords:[1 0]\n",
-      "Node 2: coords:[0 1]\n"
+      "Node 0: coords:[0 0 0]\n",
+      "Node 1: coords:[1 0 0]\n",
+      "Node 2: coords:[0 1 0]\n"
      ]
     }
    ],
@@ -181,8 +181,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.181500Z",
-     "start_time": "2025-06-24T12:13:08.173530Z"
+     "end_time": "2025-06-25T07:07:24.775210Z",
+     "start_time": "2025-06-25T07:07:24.766796Z"
     }
    },
    "cell_type": "code",
@@ -202,9 +202,9 @@
       "Element 0: Ae=0.1, le=1.00, E=7e+10\n",
       "Element 1: Ae=0.1, le=1.00, E=7e+10\n",
       "Element 2: Ae=0.1, le=1.41, E=7e+10\n",
-      "Element 0: node i=[0 0], node j=[1 0], direction=[1 0]\n",
-      "Element 1: node i=[0 0], node j=[0 1], direction=[0 1]\n",
-      "Element 2: node i=[1 0], node j=[0 1], direction=[-1  1]\n"
+      "Element 0: node i=[0 0 0], node j=[1 0 0], direction=[1 0 0]\n",
+      "Element 1: node i=[0 0 0], node j=[0 1 0], direction=[0 1 0]\n",
+      "Element 2: node i=[1 0 0], node j=[0 1 0], direction=[-1  1  0]\n"
      ]
     }
    ],
@@ -222,8 +222,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.249440Z",
-     "start_time": "2025-06-24T12:13:08.242822Z"
+     "end_time": "2025-06-25T07:07:24.810564Z",
+     "start_time": "2025-06-25T07:07:24.801052Z"
     }
    },
    "cell_type": "code",
@@ -245,10 +245,12 @@
       " [-7.e+09  7.e+09]]\n",
       "\n",
       "Element 0 stiffness matrix in the global coordinate system:\n",
-      "[[ 7.e+09  0.e+00 -7.e+09  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [-7.e+09  0.e+00  7.e+09  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00]]\n",
+      "[[ 7.e+09  0.e+00  0.e+00 -7.e+09  0.e+00  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [-7.e+09  0.e+00  0.e+00  7.e+09  0.e+00  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]]\n",
       "\n",
       "\n",
       "Element 1 stiffness matrix in the element local coordinate system:\n",
@@ -256,10 +258,12 @@
       " [-7.e+09  7.e+09]]\n",
       "\n",
       "Element 1 stiffness matrix in the global coordinate system:\n",
-      "[[ 0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00  7.e+09  0.e+00 -7.e+09]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00 -7.e+09  0.e+00  7.e+09]]\n",
+      "[[ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00  7.e+09  0.e+00  0.e+00 -7.e+09  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00 -7.e+09  0.e+00  0.e+00  7.e+09  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]]\n",
       "\n",
       "\n",
       "Element 2 stiffness matrix in the element local coordinate system:\n",
@@ -267,10 +271,12 @@
       " [-4.95e+09  4.95e+09]]\n",
       "\n",
       "Element 2 stiffness matrix in the global coordinate system:\n",
-      "[[ 2.475e+09 -2.475e+09 -2.475e+09  2.475e+09]\n",
-      " [-2.475e+09  2.475e+09  2.475e+09 -2.475e+09]\n",
-      " [-2.475e+09  2.475e+09  2.475e+09 -2.475e+09]\n",
-      " [ 2.475e+09 -2.475e+09 -2.475e+09  2.475e+09]]\n",
+      "[[ 2.47e+09 -2.47e+09  0.00e+00 -2.47e+09  2.47e+09  0.00e+00]\n",
+      " [-2.47e+09  2.47e+09  0.00e+00  2.47e+09 -2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00]\n",
+      " [-2.47e+09  2.47e+09  0.00e+00  2.47e+09 -2.47e+09  0.00e+00]\n",
+      " [ 2.47e+09 -2.47e+09  0.00e+00 -2.47e+09  2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00]]\n",
       "\n"
      ]
     }
@@ -292,8 +298,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.292457Z",
-     "start_time": "2025-06-24T12:13:08.284463Z"
+     "end_time": "2025-06-25T07:07:24.846207Z",
+     "start_time": "2025-06-25T07:07:24.835476Z"
     }
    },
    "cell_type": "code",
@@ -316,23 +322,47 @@
      "output_type": "stream",
      "text": [
       "Global stiffness matrix without supports:\n",
-      "[[ 7.00e+09  0.00e+00 -7.00e+09  0.00e+00  0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  7.00e+09  0.00e+00  0.00e+00  0.00e+00 -7.00e+09]\n",
-      " [-7.00e+09  0.00e+00  9.47e+09 -2.47e+09 -2.47e+09  2.47e+09]\n",
-      " [ 0.00e+00  0.00e+00 -2.47e+09  2.47e+09  2.47e+09 -2.47e+09]\n",
-      " [ 0.00e+00  0.00e+00 -2.47e+09  2.47e+09  2.47e+09 -2.47e+09]\n",
-      " [ 0.00e+00 -7.00e+09  2.47e+09 -2.47e+09 -2.47e+09  9.47e+09]]\n",
+      "[[ 7.00e+09  0.00e+00  0.00e+00 -7.00e+09  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  7.00e+09  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "  -7.00e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [-7.00e+09  0.00e+00  0.00e+00  9.47e+09 -2.47e+09  0.00e+00 -2.47e+09\n",
+      "   2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00  2.47e+09\n",
+      "  -2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00  2.47e+09\n",
+      "  -2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00 -7.00e+09  0.00e+00  2.47e+09 -2.47e+09  0.00e+00 -2.47e+09\n",
+      "   9.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]]\n",
       "\n",
       "Global stiffness matrix with supports:\n",
-      "[[ 1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  9.47e+09 -2.47e+09  0.00e+00  2.47e+09]\n",
-      " [ 0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00 -2.47e+09]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  1.00e+20  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  2.47e+09 -2.47e+09  0.00e+00  9.47e+09]]\n",
+      "[[ 1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  9.47e+09 -2.47e+09  0.00e+00  0.00e+00\n",
+      "   2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00  0.00e+00\n",
+      "  -2.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  1.00e+20  0.00e+00\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  1.00e+20\n",
+      "   0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  2.47e+09 -2.47e+09  0.00e+00  0.00e+00\n",
+      "   9.47e+09  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
+      "   0.00e+00  1.00e+20]]\n",
       "\n",
       "Global force vector with supports:\n",
-      "[    0.     0.     0. -1000.     0.     0.]\n"
+      "[    0.     0.     0.     0. -1000.     0.     0.     0.     0.]\n"
      ]
     }
    ],
@@ -347,8 +377,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.343894Z",
-     "start_time": "2025-06-24T12:13:08.332084Z"
+     "end_time": "2025-06-25T07:07:24.880144Z",
+     "start_time": "2025-06-25T07:07:24.870560Z"
     }
    },
    "cell_type": "code",
@@ -386,9 +416,9 @@
      "text": [
       "\n",
       "Global displacements:\n",
-      "Node 0: u=0.0, v=0.0\n",
-      "Node 1: u=-1.4285714285714285e-07, v=-6.897753035351702e-07\n",
-      "Node 2: u=0.0, v=-1.4285714285714285e-07\n",
+      "Node 0: u=0.0, v=0.0, w=0.0\n",
+      "Node 1: u=-1.4285714285714285e-07, v=-6.897753035351702e-07, w=0.0\n",
+      "Node 2: u=0.0, v=-1.4285714285714285e-07, w=0.0\n",
       "\n",
       "Member forces:\n",
       "Element 0: force=-1000.00 N, (compression)\n",
@@ -400,8 +430,11 @@
       "DOF 1: 1000.00 N\n",
       "DOF 2: 0.00 N\n",
       "DOF 3: 0.00 N\n",
-      "DOF 4: -1000.00 N\n",
-      "DOF 5: 0.00 N\n"
+      "DOF 4: -0.00 N\n",
+      "DOF 5: 0.00 N\n",
+      "DOF 6: -1000.00 N\n",
+      "DOF 7: 0.00 N\n",
+      "DOF 8: 0.00 N\n"
      ]
     }
    ],
@@ -416,8 +449,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T12:13:08.974926Z",
-     "start_time": "2025-06-24T12:13:08.384084Z"
+     "end_time": "2025-06-25T07:07:25.342867Z",
+     "start_time": "2025-06-25T07:07:24.900407Z"
     }
    },
    "cell_type": "code",
@@ -443,7 +476,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "<div id='af1f5306-8405-4afe-8803-443319f189cb'></div>"
+       "<div id='4a22dde2-f681-4e70-835f-b693663421b9'></div>"
       ]
      },
      "metadata": {},
