--- a/source/OneD/notebooks/case_study_5_5.ipynb
+++ b/source/OneD/notebooks/case_study_5_5.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:05.623418Z",
-     "start_time": "2025-06-25T03:15:05.603142Z"
+     "end_time": "2025-06-25T07:07:34.465430Z",
+     "start_time": "2025-06-25T07:07:34.448695Z"
     }
    },
    "cell_type": "code",
@@ -35,23 +35,18 @@
    "execution_count": 1
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:06.284270Z",
-     "start_time": "2025-06-25T03:15:05.638457Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# imports\n",
     "import numpy as np\n",
-    "from source.node import Node\n",
-    "from source.beam.beam import BeamElement\n",
+    "from source.OneD.node import Node\n",
+    "from source.OneD.beam.beam import BeamElement\n",
     "np.set_printoptions(precision=2, threshold=3, suppress=False)"
    ],
-   "id": "d5b501c6b333e689",
-   "outputs": [],
-   "execution_count": 2
+   "id": "10495dd1e707257e"
   },
   {
    "metadata": {},
@@ -66,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:06.717136Z",
-     "start_time": "2025-06-25T03:15:06.709865Z"
+     "end_time": "2025-06-25T07:07:35.416875Z",
+     "start_time": "2025-06-25T07:07:35.409363Z"
     }
    },
    "cell_type": "code",
@@ -99,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:06.738792Z",
-     "start_time": "2025-06-25T03:15:06.731937Z"
+     "end_time": "2025-06-25T07:07:35.480190Z",
+     "start_time": "2025-06-25T07:07:35.471710Z"
     }
    },
    "cell_type": "code",
@@ -122,8 +117,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:06.908103Z",
-     "start_time": "2025-06-25T03:15:06.894690Z"
+     "end_time": "2025-06-25T07:07:35.519747Z",
+     "start_time": "2025-06-25T07:07:35.505324Z"
     }
    },
    "cell_type": "code",
@@ -206,8 +201,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:06.999276Z",
-     "start_time": "2025-06-25T03:15:06.988685Z"
+     "end_time": "2025-06-25T07:07:35.605164Z",
+     "start_time": "2025-06-25T07:07:35.593882Z"
     }
    },
    "cell_type": "code",
@@ -239,13 +234,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-25T03:15:07.582761Z",
-     "start_time": "2025-06-25T03:15:07.065328Z"
+     "end_time": "2025-06-25T07:07:36.226570Z",
+     "start_time": "2025-06-25T07:07:35.697710Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from source.utils import assemble_global_K, apply_boundary_conditions\n",
+    "\n",
     "\n",
     "K_global = assemble_global_K(ND=ND, nodes=nodes, elements=elements)\n",
     "K_global, F = apply_boundary_conditions(ND=ND, supports=supports, K=K_global, F=F)\n",
@@ -256,15 +251,14 @@
    "id": "158c701fb91be890",
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'BeamElement' object has no attribute 'dof_indices'",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'assemble_global_K' from 'source.utils' (E:\\modules\\FEM_Practical_Course\\source\\utils.py)",
      "output_type": "error",
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[7]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msource\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mutils\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m assemble_global_K, apply_boundary_conditions\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m K_global = \u001B[43massemble_global_K\u001B[49m\u001B[43m(\u001B[49m\u001B[43mND\u001B[49m\u001B[43m=\u001B[49m\u001B[43mND\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnodes\u001B[49m\u001B[43m=\u001B[49m\u001B[43mnodes\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43melements\u001B[49m\u001B[43m=\u001B[49m\u001B[43melements\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m      4\u001B[39m K_global, F = apply_boundary_conditions(ND=ND, supports=supports, K=K_global, F=F)\n\u001B[32m      6\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34massemble_M\u001B[39m():\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\modules\\FEM_Practical_Course\\source\\utils.py:61\u001B[39m, in \u001B[36massemble_global_K\u001B[39m\u001B[34m(ND, nodes, elements)\u001B[39m\n\u001B[32m     58\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m _id, element \u001B[38;5;129;01min\u001B[39;00m elements.items():\n\u001B[32m     59\u001B[39m     K_element = element.Ke  \u001B[38;5;66;03m# Global stiffness matrix for the element\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m61\u001B[39m     dof_indices = \u001B[43melement\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdof_indices\u001B[49m  \u001B[38;5;66;03m# Use the pre-set DOF indices for the element\u001B[39;00m\n\u001B[32m     62\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     63\u001B[39m         \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     64\u001B[39m             \u001B[38;5;66;03m# add the i,j element of the local stiffness matrix to the element of the global stiffness matrix defined by the global dof indices.\u001B[39;00m\n",
-      "\u001B[31mAttributeError\u001B[39m: 'BeamElement' object has no attribute 'dof_indices'"
+      "\u001B[31mImportError\u001B[39m                               Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[7]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msource\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mutils\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m assemble_global_K, apply_boundary_conditions\n\u001B[32m      3\u001B[39m K_global = assemble_global_K(ND=ND, nodes=nodes, elements=elements)\n\u001B[32m      4\u001B[39m K_global, F = apply_boundary_conditions(ND=ND, supports=supports, K=K_global, F=F)\n",
+      "\u001B[31mImportError\u001B[39m: cannot import name 'assemble_global_K' from 'source.utils' (E:\\modules\\FEM_Practical_Course\\source\\utils.py)"
      ]
     }
    ],
