minor changes todo update

--- a/source/OneD/notebooks/beam_modal_analysis.ipynb
+++ b/source/OneD/notebooks/beam_modal_analysis.ipynb
@@ -288,7 +288,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Now doing the same for a 3D beam",
+   "source": [
+    "# Now doing the same for a 3D beam\n",
+    "\n",
+    "The expected behaviour is:\n",
+    "- The same frequencies and bending shapes are found in the 3D case as in the 2D case, but always two of them, orthogonally.\n",
+    "- Same means: if NE -> inf, the frequencies converge to the same values as in the 2D case.\n",
+    "- Additionally, torsional and axial modes are found as these DOFs are additionally present."
+   ],
    "id": "2a0c63c907e79e45"
   },
   {
@@ -317,7 +324,7 @@
     "spatial_freqs, shapes = spatial_model.solve_modal()\n",
     "spatial_model.plot_frame(shapes[:, 0])\n",
     "\n",
-    "# finding the same frequencies in the 2D and 3D solutions\n",
+    "# finding the same frequencies in the 2D and 3D solutions within tolerance\n",
     "for spindex, fr in enumerate(spatial_freqs[:20]):\n",
     "    for twodindex, same in enumerate(freqs):\n",
     "        if np.isclose(fr, same, atol=1e-1):\n",
