--- a/source/OneD/notebooks/beam_modal_analysis.ipynb
+++ b/source/OneD/notebooks/beam_modal_analysis.ipynb
@@ -46,8 +46,8 @@
     "# imports\n",
     "import numpy as np\n",
     "import scipy as sp\n",
-    "from source.OneD.node import Node\n",
-    "from source.OneD.beam.beam import BeamElement, BeamModel\n",
+    "from source.node import Node\n",
+    "from source.OneD.beam.beam import BeamModel\n",
     "np.set_printoptions(precision=2, threshold=3, suppress=False)"
    ],
    "id": "10495dd1e707257e",
@@ -308,7 +308,7 @@
    "cell_type": "code",
    "source": [
     "from source.OneD.frame.spatial_frame import SpatialFrameModel\n",
-    "from source.OneD.node import IDMixin\n",
+    "from source.node import IDMixin\n",
     "\n",
     "IDMixin.reset()\n",
     "\n",
