--- a/source/OneD/notebooks/example_4_2.ipynb
+++ b/source/OneD/notebooks/example_4_2.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# imports\n",
     "import numpy as np\n",
-    "from source.OneD.node import Node\n",
+    "from source.node import Node\n",
     "from source.OneD.truss.truss import TrussModel\n",
     "np.set_printoptions(precision=2, suppress=False)"
    ],
