--- a/source/OneD/notebooks/case_study_5_5.ipynb
+++ b/source/OneD/notebooks/case_study_5_5.ipynb
@@ -46,8 +46,8 @@
     "# imports\n",
     "import numpy as np\n",
     "import scipy as sp\n",
-    "from source.OneD.node import Node\n",
-    "from source.OneD.beam.beam import BeamElement, BeamModel\n",
+    "from source.node import Node\n",
+    "from source.OneD.beam.beam import BeamModel\n",
     "np.set_printoptions(precision=2, threshold=3, suppress=False)"
    ],
    "id": "10495dd1e707257e",
