--- a/source/TwoD/plane_quad_derivations.ipynb
+++ b/source/TwoD/plane_quad_derivations.ipynb
@@ -14,8 +14,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.180631Z",
-     "start_time": "2025-07-01T16:45:34.167666Z"
+     "end_time": "2025-07-02T10:02:29.136967Z",
+     "start_time": "2025-07-02T10:02:28.124642Z"
     }
    },
    "cell_type": "code",
@@ -27,7 +27,7 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.246486Z",
-     "start_time": "2025-07-01T16:45:34.237391Z"
+     "end_time": "2025-07-02T10:02:29.446396Z",
+     "start_time": "2025-07-02T10:02:29.437105Z"
     }
    },
    "cell_type": "code",
@@ -58,10 +58,10 @@
     "x3_val, y3_val = 1, 1\n",
     "x4_val, y4_val = -1, 1\n",
     "\n",
-    "# x1_val, y1_val = -3, -2\n",
-    "# x2_val, y2_val = 1.5, -0.7\n",
-    "# x3_val, y3_val = 1, 1.2\n",
-    "# x4_val, y4_val = -2, 1\n",
+    "x1_val, y1_val = -3, -2\n",
+    "x2_val, y2_val = 1.5, -0.7\n",
+    "x3_val, y3_val = 1, 1.2\n",
+    "x4_val, y4_val = -2, 1\n",
     "\n",
     "# Create a dictionary to map the symbolic coordinates to their numerical values\n",
     "coordinate_values = {\n",
@@ -73,7 +73,7 @@
    ],
    "id": "3a787f888260b0c1",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -106,8 +106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.313658Z",
-     "start_time": "2025-07-01T16:45:34.308147Z"
+     "end_time": "2025-07-02T10:02:29.457260Z",
+     "start_time": "2025-07-02T10:02:29.451214Z"
     }
    },
    "cell_type": "code",
@@ -117,7 +117,7 @@
    ],
    "id": "1a22d70b68e357e7",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -128,8 +128,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.371940Z",
-     "start_time": "2025-07-01T16:45:34.365379Z"
+     "end_time": "2025-07-02T10:02:29.493361Z",
+     "start_time": "2025-07-02T10:02:29.486436Z"
     }
    },
    "cell_type": "code",
@@ -142,7 +142,7 @@
    ],
    "id": "e5a2c96d934e2d7a",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -153,8 +153,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.467684Z",
-     "start_time": "2025-07-01T16:45:34.438398Z"
+     "end_time": "2025-07-02T10:02:29.594186Z",
+     "start_time": "2025-07-02T10:02:29.507583Z"
     }
    },
    "cell_type": "code",
@@ -262,7 +262,7 @@
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -273,8 +273,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.532429Z",
-     "start_time": "2025-07-01T16:45:34.522289Z"
+     "end_time": "2025-07-02T10:02:29.629582Z",
+     "start_time": "2025-07-02T10:02:29.616856Z"
     }
    },
    "cell_type": "code",
@@ -312,7 +312,7 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -334,8 +334,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.626741Z",
-     "start_time": "2025-07-01T16:45:34.606126Z"
+     "end_time": "2025-07-02T10:02:29.842417Z",
+     "start_time": "2025-07-02T10:02:29.654008Z"
     }
    },
    "cell_type": "code",
@@ -397,7 +397,7 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -408,8 +408,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.697324Z",
-     "start_time": "2025-07-01T16:45:34.688266Z"
+     "end_time": "2025-07-02T10:02:29.880898Z",
+     "start_time": "2025-07-02T10:02:29.865748Z"
     }
    },
    "cell_type": "code",
@@ -434,7 +434,7 @@
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -500,8 +500,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.797181Z",
-     "start_time": "2025-07-01T16:45:34.767579Z"
+     "end_time": "2025-07-02T10:02:29.975739Z",
+     "start_time": "2025-07-02T10:02:29.905496Z"
     }
    },
    "cell_type": "code",
@@ -545,68 +545,68 @@
      "output_type": "stream",
      "text": [
       "The jacobian matrix with coordinate values substituted is:\n",
-      "⎡0.125⋅η + 1.125  0.125⋅η + 0.125⎤\n",
+      "⎡1.875 - 0.375⋅η  0.375 - 0.275⋅η⎤\n",
       "⎢                                ⎥\n",
-      "⎣0.125⋅ξ - 0.125  0.125⋅ξ + 1.125⎦\n",
+      "⎣0.125 - 0.375⋅ξ  1.225 - 0.275⋅ξ⎦\n",
       "\n",
       "Jacobian matrix at xi=-1, eta=-1:\n",
-      "⎡ 1.0    0 ⎤\n",
+      "⎡2.25  0.65⎤\n",
       "⎢          ⎥\n",
-      "⎣-0.25  1.0⎦\n",
-      "The determinant at this point is |J|=1.00\n",
+      "⎣0.5   1.5 ⎦\n",
+      "The determinant at this point is |J|=3.05\n",
       "\n",
       "Jacobian matrix at xi=-1, eta=0:\n",
-      "⎡1.125  0.125⎤\n",
+      "⎡1.875  0.375⎤\n",
       "⎢            ⎥\n",
-      "⎣-0.25   1.0 ⎦\n",
-      "The determinant at this point is |J|=1.16\n",
+      "⎣ 0.5    1.5 ⎦\n",
+      "The determinant at this point is |J|=2.62\n",
       "\n",
       "Jacobian matrix at xi=-1, eta=1:\n",
-      "⎡1.25   0.25⎤\n",
-      "⎢           ⎥\n",
-      "⎣-0.25  1.0 ⎦\n",
-      "The determinant at this point is |J|=1.31\n",
+      "⎡1.5  0.1⎤\n",
+      "⎢        ⎥\n",
+      "⎣0.5  1.5⎦\n",
+      "The determinant at this point is |J|=2.20\n",
       "\n",
       "Jacobian matrix at xi=0, eta=-1:\n",
-      "⎡ 1.0      0  ⎤\n",
-      "⎢             ⎥\n",
-      "⎣-0.125  1.125⎦\n",
-      "The determinant at this point is |J|=1.12\n",
+      "⎡2.25   0.65 ⎤\n",
+      "⎢            ⎥\n",
+      "⎣0.125  1.225⎦\n",
+      "The determinant at this point is |J|=2.68\n",
       "\n",
       "Jacobian matrix at xi=0, eta=0:\n",
-      "⎡1.125   0.125⎤\n",
-      "⎢             ⎥\n",
-      "⎣-0.125  1.125⎦\n",
-      "The determinant at this point is |J|=1.28\n",
+      "⎡1.875  0.375⎤\n",
+      "⎢            ⎥\n",
+      "⎣0.125  1.225⎦\n",
+      "The determinant at this point is |J|=2.25\n",
       "\n",
       "Jacobian matrix at xi=0, eta=1:\n",
-      "⎡ 1.25   0.25 ⎤\n",
-      "⎢             ⎥\n",
-      "⎣-0.125  1.125⎦\n",
-      "The determinant at this point is |J|=1.44\n",
+      "⎡ 1.5    0.1 ⎤\n",
+      "⎢            ⎥\n",
+      "⎣0.125  1.225⎦\n",
+      "The determinant at this point is |J|=1.82\n",
       "\n",
       "Jacobian matrix at xi=1, eta=-1:\n",
-      "⎡1.0   0  ⎤\n",
-      "⎢         ⎥\n",
-      "⎣ 0   1.25⎦\n",
-      "The determinant at this point is |J|=1.25\n",
+      "⎡2.25   0.65⎤\n",
+      "⎢           ⎥\n",
+      "⎣-0.25  0.95⎦\n",
+      "The determinant at this point is |J|=2.30\n",
       "\n",
       "Jacobian matrix at xi=1, eta=0:\n",
-      "⎡1.125  0.125⎤\n",
+      "⎡1.875  0.375⎤\n",
       "⎢            ⎥\n",
-      "⎣  0    1.25 ⎦\n",
-      "The determinant at this point is |J|=1.41\n",
+      "⎣-0.25  0.95 ⎦\n",
+      "The determinant at this point is |J|=1.88\n",
       "\n",
       "Jacobian matrix at xi=1, eta=1:\n",
-      "⎡1.25  0.25⎤\n",
-      "⎢          ⎥\n",
-      "⎣ 0    1.25⎦\n",
-      "The determinant at this point is |J|=1.56\n",
+      "⎡ 1.5   0.1 ⎤\n",
+      "⎢           ⎥\n",
+      "⎣-0.25  0.95⎦\n",
+      "The determinant at this point is |J|=1.45\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -615,10 +615,33 @@
    "id": "e0170106c7d80560"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "_### Deriving the $B^I$ matrix\n",
+    "This matrix iss associated with the in-plane strains.\n",
+    "$$B^I = \\begin{bmatrix}B^I_1 & B^I_2 & B^I_3 & B^I_4\\end{bmatrix}$$\n",
+    "\n",
+    "where $B^I_j$ is the matrix for node $j$:\n",
+    "$$B^I_j = \\begin{bmatrix}\n",
+    "0 & 0 & -\\frac{\\partial N_j}{\\partial x} \\\\\n",
+    "0 & \\frac{\\partial N_j}{\\partial y} & 0 \\\\\n",
+    "0 & \\frac{\\partial N_j}{\\partial x} & -\\frac{\\partial N_j}{\\partial y} \\\\\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\\frac{\\partial N_j}{\\partial x} = \\frac{\\partial N_j}{\\partial \\xi} \\frac{\\partial \\xi}{\\partial x}$$\n",
+    "\n",
+    "wich uses the inverse jacobian matrix to transform the derivatives from the natural coordinates to the physical coordinates."
+   ],
+   "id": "53c0cccd8690f82e"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:34.998924Z",
-     "start_time": "2025-07-01T16:45:34.851245Z"
+     "end_time": "2025-07-02T10:02:30.578938Z",
+     "start_time": "2025-07-02T10:02:30.007307Z"
     }
    },
    "cell_type": "code",
@@ -650,8 +673,8 @@
     "y_vals = sp.lambdify((XI, ETA), y_map.subs(coordinate_values))(xi_grid, eta_grid)\n",
     "\n",
     "# # move the physical element so the centroid is at 0, 0\n",
-    "# x_vals -= np.mean([x1_val, x2_val, x3_val, x4_val])\n",
-    "# y_vals -= np.mean([y1_val, y2_val, y3_val, y4_val])\n",
+    "x_vals -= np.mean([x1_val, x2_val, x3_val, x4_val])\n",
+    "y_vals -= np.mean([y1_val, y2_val, y3_val, y4_val])\n",
     "\n",
     "# Create the contour plot\n",
     "plt.figure()\n",
@@ -660,15 +683,42 @@
     "# plot the natural element shape, too\n",
     "plt.plot([-1, 1, 1, -1, -1], [-1, -1, 1, 1, -1], 'k--', label='Natural Element Shape')\n",
     "\n",
-    "plt.colorbar(contour, label='det(J)')\n",
+    "# setting the limits so everything is visible\n",
     "plt.xlim([1.5 * min(-1, np.min(x_vals)), 1.5 * max(1, np.max(x_vals))])\n",
     "plt.ylim([1.5 * min(-1, np.min(y_vals)), 1.5 * max(1, np.max(y_vals))])\n",
+    "\n",
+    "# adding the real physical coordinates to the positions of the moved nodes\n",
+    "x1_val_pos = x1_val - np.mean([x1_val, x2_val, x3_val, x4_val])\n",
+    "y1_val_pos = y1_val - np.mean([y1_val, y2_val, y3_val, y4_val])\n",
+    "x2_val_pos = x2_val - np.mean([x1_val, x2_val, x3_val, x4_val])\n",
+    "y2_val_pos = y2_val - np.mean([y1_val, y2_val, y3_val, y4_val])\n",
+    "x3_val_pos = x3_val - np.mean([x1_val, x2_val, x3_val, x4_val])\n",
+    "y3_val_pos = y3_val - np.mean([y1_val, y2_val, y3_val, y4_val])\n",
+    "x4_val_pos = x4_val - np.mean([x1_val, x2_val, x3_val, x4_val])\n",
+    "y4_val_pos = y4_val - np.mean([y1_val, y2_val, y3_val, y4_val])\n",
+    "\n",
+    "for xpos, ypos, xtext, ytext in zip(\n",
+    "        [x1_val_pos, x2_val_pos, x3_val_pos, x4_val_pos],\n",
+    "        [y1_val_pos, y2_val_pos, y3_val_pos, y4_val_pos],\n",
+    "        [coordinate_values[x1], coordinate_values[x2], coordinate_values[x3], coordinate_values[x4]],\n",
+    "        [coordinate_values[y1], coordinate_values[y2], coordinate_values[y3], coordinate_values[y4]]\n",
+    "):\n",
+    "    plt.plot(xpos, ypos, 'ro')  # plot the physical nodes\n",
+    "    plt.text(xpos, ypos, f'({xtext:.2f}, {ytext:.2f})', fontsize=8, ha='right')\n",
+    "\n",
+    "# add a vertical and horizontal line at the origin\n",
+    "plt.axhline(0, color='k', linestyle='--', linewidth=0.5)\n",
+    "plt.axvline(0, color='k', linestyle='--', linewidth=0.5)\n",
+    "\n",
+    "plt.colorbar(contour, label='det(J)')\n",
+    "\n",
+    "plt.title('Jacobian of the physical element with the local element.\\nCentroids are matched at (0, 0), real coordinates shown.')\n",
     "plt.xlabel('xi')\n",
     "plt.ylabel('eta')\n",
     "plt.axis('equal')\n",
     "plt.show()"
    ],
-   "id": "2ce3606b1af07f8f",
+   "id": "c5aa62feee352319",
    "outputs": [
     {
      "data": {
@@ -686,43 +736,20 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "<div id='47ec5781-1253-4fb6-8215-6775864170e9'></div>"
+       "<div id='3eae1aa3-59be-425e-af24-855cfe6fdf38'></div>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 48
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "### Deriving the $B^I$ matrix\n",
-    "This matrix iss associated with the in-plane strains.\n",
-    "$$B^I = \\begin{bmatrix}B^I_1 & B^I_2 & B^I_3 & B^I_4\\end{bmatrix}$$\n",
-    "\n",
-    "where $B^I_j$ is the matrix for node $j$:\n",
-    "$$B^I_j = \\begin{bmatrix}\n",
-    "0 & 0 & -\\frac{\\partial N_j}{\\partial x} \\\\\n",
-    "0 & \\frac{\\partial N_j}{\\partial y} & 0 \\\\\n",
-    "0 & \\frac{\\partial N_j}{\\partial x} & -\\frac{\\partial N_j}{\\partial y} \\\\\n",
-    "\\end{bmatrix}$$\n",
-    "\n",
-    "and\n",
-    "\n",
-    "$$\\frac{\\partial N_j}{\\partial x} = \\frac{\\partial N_j}{\\partial \\xi} \\frac{\\partial \\xi}{\\partial x}$$\n",
-    "\n",
-    "wich uses the inverse jacobian matrix to transform the derivatives from the natural coordinates to the physical coordinates."
-   ],
-   "id": "53c0cccd8690f82e"
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:35.056076Z",
-     "start_time": "2025-07-01T16:45:35.047417Z"
+     "end_time": "2025-07-02T10:02:30.644317Z",
+     "start_time": "2025-07-02T10:02:30.636927Z"
     }
    },
    "cell_type": "code",
@@ -760,7 +787,7 @@
    ],
    "id": "7c57ab1cc9976193",
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -781,8 +808,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:35.092020Z",
-     "start_time": "2025-07-01T16:45:35.084032Z"
+     "end_time": "2025-07-02T10:02:30.695626Z",
+     "start_time": "2025-07-02T10:02:30.685479Z"
     }
    },
    "cell_type": "code",
@@ -822,7 +849,7 @@
    ],
    "id": "e566b0a6bca9b71a",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -836,8 +863,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:45:35.244630Z",
-     "start_time": "2025-07-01T16:45:35.196774Z"
+     "end_time": "2025-07-02T10:02:30.790812Z",
+     "start_time": "2025-07-02T10:02:30.735087Z"
     }
    },
    "cell_type": "code",
@@ -862,36 +889,36 @@
      "output_type": "stream",
      "text": [
       "BI Matrix at xi=0, eta=0 with substituted coordinates:\n",
-      "⎡        0                  0           0.24390243902439          0            ↪\n",
+      "⎡        0                   0           0.122222222222222   0      0    -0.15 ↪\n",
       "⎢                                                                              ↪\n",
-      "⎢        0          -0.195121951219512         0                  0          - ↪\n",
+      "⎢        0           -0.166666666666667          0           0    -0.25    0   ↪\n",
       "⎢                                                                              ↪\n",
-      "⎣-0.24390243902439  0.195121951219512          0          0.195121951219512  0 ↪\n",
+      "⎣-0.122222222222222  0.166666666666667           0          0.15  0.25     0   ↪\n",
       "\n",
-      "↪        0          -0.195121951219512         0                  0            ↪\n",
+      "↪           0                  0           -0.122222222222222    0      0    0 ↪\n",
       "↪                                                                              ↪\n",
-      "↪ 0.24390243902439          0                  0          0.195121951219512    ↪\n",
+      "↪           0          0.166666666666667           0             0    0.25     ↪\n",
       "↪                                                                              ↪\n",
-      "↪ .24390243902439           0           0.24390243902439  -0.195121951219512   ↪\n",
+      "↪   0.122222222222222  -0.166666666666667          0           -0.15  -0.25    ↪\n",
       "\n",
-      "↪ -0.24390243902439          0                   0          0.195121951219512⎤\n",
-      "↪                                                                            ⎥\n",
-      "↪         0                  0           0.24390243902439           0        ⎥\n",
-      "↪                                                                            ⎥\n",
-      "↪         0          -0.195121951219512  -0.24390243902439          0        ⎦\n",
+      "↪ .15⎤\n",
+      "↪    ⎥\n",
+      "↪ 0  ⎥\n",
+      "↪    ⎥\n",
+      "↪ 0  ⎦\n",
       "\n",
       "BO Matrix at xi=0, eta=0 with substituted coordinates:\n",
-      "⎡-0.24390243902439     0    0.25  0.195121951219512    0    0.25  0.2439024390 ↪\n",
+      "⎡-0.122222222222222    0    0.25  0.15     0    0.25  0.122222222222222    0   ↪\n",
       "⎢                                                                              ↪\n",
-      "⎣-0.195121951219512  -0.25   0    -0.24390243902439  -0.25   0    0.1951219512 ↪\n",
+      "⎣-0.166666666666667  -0.25   0    -0.25  -0.25   0    0.166666666666667  -0.25 ↪\n",
       "\n",
-      "↪ 2439     0    0.25  -0.195121951219512    0    0.25⎤\n",
-      "↪                                                    ⎥\n",
-      "↪ 19512  -0.25   0     0.24390243902439   -0.25   0  ⎦\n"
+      "↪   0.25  -0.15    0    0.25⎤\n",
+      "↪                           ⎥\n",
+      "↪    0    0.25   -0.25   0  ⎦\n"
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 13
   },
   {
    "metadata": {},
