--- a/source/TwoD/plane_quad_derivations.ipynb
+++ b/source/TwoD/plane_quad_derivations.ipynb
@@ -14,8 +14,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.136967Z",
-     "start_time": "2025-07-02T10:02:28.124642Z"
+     "end_time": "2025-07-02T15:25:20.253613Z",
+     "start_time": "2025-07-02T15:25:19.426773Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.446396Z",
-     "start_time": "2025-07-02T10:02:29.437105Z"
+     "end_time": "2025-07-02T15:25:20.495789Z",
+     "start_time": "2025-07-02T15:25:20.487464Z"
     }
    },
    "cell_type": "code",
@@ -106,8 +106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.457260Z",
-     "start_time": "2025-07-02T10:02:29.451214Z"
+     "end_time": "2025-07-02T15:25:20.521202Z",
+     "start_time": "2025-07-02T15:25:20.516080Z"
     }
    },
    "cell_type": "code",
@@ -128,8 +128,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.493361Z",
-     "start_time": "2025-07-02T10:02:29.486436Z"
+     "end_time": "2025-07-02T15:25:20.540339Z",
+     "start_time": "2025-07-02T15:25:20.534779Z"
     }
    },
    "cell_type": "code",
@@ -153,8 +153,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.594186Z",
-     "start_time": "2025-07-02T10:02:29.507583Z"
+     "end_time": "2025-07-02T15:25:20.621347Z",
+     "start_time": "2025-07-02T15:25:20.554350Z"
     }
    },
    "cell_type": "code",
@@ -273,8 +273,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.629582Z",
-     "start_time": "2025-07-02T10:02:29.616856Z"
+     "end_time": "2025-07-02T15:25:20.649682Z",
+     "start_time": "2025-07-02T15:25:20.638026Z"
     }
    },
    "cell_type": "code",
@@ -334,8 +334,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.842417Z",
-     "start_time": "2025-07-02T10:02:29.654008Z"
+     "end_time": "2025-07-02T15:25:20.826958Z",
+     "start_time": "2025-07-02T15:25:20.672763Z"
     }
    },
    "cell_type": "code",
@@ -408,8 +408,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.880898Z",
-     "start_time": "2025-07-02T10:02:29.865748Z"
+     "end_time": "2025-07-02T15:25:20.871638Z",
+     "start_time": "2025-07-02T15:25:20.858787Z"
     }
    },
    "cell_type": "code",
@@ -500,8 +500,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:29.975739Z",
-     "start_time": "2025-07-02T10:02:29.905496Z"
+     "end_time": "2025-07-02T15:25:20.955460Z",
+     "start_time": "2025-07-02T15:25:20.892465Z"
     }
    },
    "cell_type": "code",
@@ -640,8 +640,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:30.578938Z",
-     "start_time": "2025-07-02T10:02:30.007307Z"
+     "end_time": "2025-07-02T15:25:21.595493Z",
+     "start_time": "2025-07-02T15:25:21.000323Z"
     }
    },
    "cell_type": "code",
@@ -736,7 +736,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "<div id='3eae1aa3-59be-425e-af24-855cfe6fdf38'></div>"
+       "<div id='a7f472cb-49c8-489d-b078-d5a69171d9c7'></div>"
       ]
      },
      "metadata": {},
@@ -748,8 +748,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:30.644317Z",
-     "start_time": "2025-07-02T10:02:30.636927Z"
+     "end_time": "2025-07-02T15:25:21.644745Z",
+     "start_time": "2025-07-02T15:25:21.636607Z"
     }
    },
    "cell_type": "code",
@@ -808,8 +808,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:30.695626Z",
-     "start_time": "2025-07-02T10:02:30.685479Z"
+     "end_time": "2025-07-02T15:25:21.699320Z",
+     "start_time": "2025-07-02T15:25:21.689126Z"
     }
    },
    "cell_type": "code",
@@ -863,8 +863,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T10:02:30.790812Z",
-     "start_time": "2025-07-02T10:02:30.735087Z"
+     "end_time": "2025-07-02T15:25:21.805394Z",
+     "start_time": "2025-07-02T15:25:21.746445Z"
     }
    },
    "cell_type": "code",
@@ -923,8 +923,299 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### C matrix - compliance matrix",
+   "source": [
+    "### C matrix - compliance matrix\n",
+    "\n",
+    "This is given for plane stress and plane strain problems in Eqs. 2.31, 2.32.\n",
+    "\n",
+    "The compliance matrix c for the out-of-plane (bending) part needs to relate moments to curvatures. For an isotropic Reissner-Mindlin plate, this relationship can be expressed in terms of the material properties $ E $ (Young's modulus) and $ \\nu $ (Poisson's ratio). The 2x2 compliance matrix $ C_b $ relates the bending moments to the curvatures and is given by:\n",
+    "\n",
+    "$$C_b = \\begin{bmatrix} D & D\\nu \\\\ D\\nu & D \\end{bmatrix}$$\n",
+    "\n",
+    "where $ D $ is the flexural rigidity of the plate, defined as:\n",
+    "\n",
+    "$$D = \\frac{E t^3}{12(1 - \\nu^2)}$$\n",
+    "\n",
+    "Here, $ t $ is the thickness of the plate."
+   ],
    "id": "f4c798be65991180"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T15:25:21.913266Z",
+     "start_time": "2025-07-02T15:25:21.903743Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# the c matrix for plane stress problems is given by:\n",
+    "c = sp.Matrix([[1, nu, 0],\n",
+    "               [nu, 1, 0],\n",
+    "               [0, 0, (1 - nu) / 2]]) * E / (1 - nu ** 2)\n",
+    "print(c)\n",
+    "\n",
+    "D = E / (12 * (1 - nu ** 2))  # flexural rigidity\n",
+    "cs = sp.Matrix([\n",
+    "    [D, D * nu],\n",
+    "    [D * nu, D]]\n",
+    ")"
+   ],
+   "id": "efde02f76b5b6220",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[230769230769.231, 69230769230.7692, 0], [69230769230.7692, 230769230769.231, 0], [0, 0, 80769230769.2308]])\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Getting the stiffness matrix\n",
+    "This is done by numerically integtrating the stiffness matrix over the element area using the Gauss quadrature method."
+   ],
+   "id": "34f60e88fceec482"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Quadrature points and weights",
+   "id": "68f057fcd402a94"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T15:25:22.037823Z",
+     "start_time": "2025-07-02T15:25:22.028024Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gi_data = {\n",
+    "    1: {\n",
+    "        'point': [0],\n",
+    "        'weight': [2]\n",
+    "    },\n",
+    "    2: {\n",
+    "        'point': [-1 / np.sqrt(3), 1 / np.sqrt(3)],\n",
+    "        'weight': [1, 1]\n",
+    "    },\n",
+    "    3: {\n",
+    "        'point': [-np.sqrt(3 / 5), 0, np.sqrt(3 / 5)],\n",
+    "        'weight': [5 / 9,  8 / 9, 5 / 9]\n",
+    "    },\n",
+    "    4: {\n",
+    "        'point': [-0.861136, -0.339981, 0.339981, 0.861136],\n",
+    "        'weight': [0.347855, 0.652145, 0.652145, 0.347855]\n",
+    "    },\n",
+    "    5: {\n",
+    "        'point': [-0.906180, -0.538469, 0, 0.906180, 0.538469],\n",
+    "        'weight': [0.236927, 0.478629, 0.568889, 0.478629, 0.236927]\n",
+    "    },\n",
+    "    6: {\n",
+    "        'point': [-0.932469, -0.661209, -0.238619, 0.238619, 0.661209, 0.932469],\n",
+    "        'weight': [0.171324, 0.360761, 0.467914, 0.467914, 0.360761, 0.171324]\n",
+    "    }\n",
+    "}"
+   ],
+   "id": "72b6352495c0438b",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T15:25:22.149356Z",
+     "start_time": "2025-07-02T15:25:22.134157Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "### Helper function for displaying the eigenmodes of the stiffness matrix\n",
+    "\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from matplotlib.patches import Polygon\n",
+    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "\n",
+    "def plot_eigenshape(ax, eigenvector, coords, title=\"\", desired_scale_fraction=0.25):\n",
+    "    \"\"\"\n",
+    "    Plots a 3D eigenshape for the 4-node plate element.\n",
+    "\n",
+    "    :param ax: The matplotlib 3D axis object to plot on.\n",
+    "    :param eigenvector: The eigenvector representing the mode shape (12x1 array).\n",
+    "    :param coords: A dictionary with the physical coordinates of the nodes.\n",
+    "    :param title: The title for the plot.\n",
+    "    :param scale_factor: A factor to scale the displacements for visualization.\n",
+    "    \"\"\"\n",
+    "    # 1. Extrahiere die physikalischen Koordinaten der Knoten\n",
+    "    x_coords = np.array([coords[x1], coords[x2], coords[x3], coords[x4]])\n",
+    "    y_coords = np.array([coords[y1], coords[y2], coords[y3], coords[y4]])\n",
+    "    z_coords = np.zeros(4) # Ursprüngliche z-Koordinaten sind 0\n",
+    "\n",
+    "    # 2. Zeichne das ursprüngliche, unverformte Element\n",
+    "    verts_orig = [list(zip(x_coords, y_coords, z_coords))]\n",
+    "    poly_orig = Poly3DCollection(verts_orig, alpha=0.2, facecolors='cyan', edgecolors='k')\n",
+    "    ax.add_collection3d(poly_orig)\n",
+    "\n",
+    "\n",
+    "    # 3. Berechne die verformte Form mit automatischer Skalierung\n",
+    "    # Extrahiere die w-Verschiebungen (vertikal) aus dem Eigenvektor\n",
+    "    w_displacements_raw = np.real_if_close(eigenvector[0::3])\n",
+    "\n",
+    "    # Berechne eine charakteristische Länge des Elements (Diagonale des Bounding Box)\n",
+    "    char_length = np.sqrt((np.max(x_coords) - np.min(x_coords))**2 + (np.max(y_coords) - np.min(y_coords))**2)\n",
+    "\n",
+    "    # Finde die maximale absolute Verschiebung im Modus\n",
+    "    max_disp = np.max(np.abs(w_displacements_raw))\n",
+    "\n",
+    "    # Berechne den Skalierungsfaktor, um die Verschiebung sichtbar zu machen\n",
+    "    scale_factor = 1.0\n",
+    "    if max_disp > 1e-9: # Verhindere Division durch Null\n",
+    "        scale_factor = (desired_scale_fraction * char_length) / max_disp\n",
+    "\n",
+    "    w_displacements = w_displacements_raw * scale_factor\n",
+    "\n",
+    "    # 4. Erstelle ein Gitter im natürlichen Koordinatensystem für eine glatte Oberfläche\n",
+    "    xi_vals = np.linspace(-1, 1, 20)\n",
+    "    eta_vals = np.linspace(-1, 1, 20)\n",
+    "    xi_grid, eta_grid = np.meshgrid(xi_vals, eta_vals)\n",
+    "\n",
+    "    # Lambdify Shape- und Mapping-Funktionen für die schnelle Auswertung\n",
+    "    N_funcs = [sp.lambdify((XI, ETA), n) for n in shape_functions()]\n",
+    "    x_map_func = sp.lambdify((XI, ETA), x_map.subs(coordinate_values))\n",
+    "    y_map_func = sp.lambdify((XI, ETA), y_map.subs(coordinate_values))\n",
+    "\n",
+    "    # Berechne die physikalischen (x, y) und verformten (z) Koordinaten auf dem Gitter\n",
+    "    x_surf = x_map_func(xi_grid, eta_grid)\n",
+    "    y_surf = y_map_func(xi_grid, eta_grid)\n",
+    "    z_surf = np.zeros_like(xi_grid)\n",
+    "    for i in range(NNODE):\n",
+    "        z_surf += N_funcs[i](xi_grid, eta_grid) * w_displacements[i]\n",
+    "\n",
+    "    # 5. Zeichne die verformte Oberfläche\n",
+    "    ax.plot_surface(x_surf, y_surf, z_surf, cmap='viridis', alpha=0.8)\n",
+    "\n",
+    "    # 6. Setze Achsenbeschriftungen und Titel\n",
+    "    ax.set_xlabel('X-Koordinate')\n",
+    "    ax.set_ylabel('Y-Koordinate')\n",
+    "    ax.set_zlabel('W-Verschiebung')\n",
+    "    ax.set_title(title)\n",
+    "    ax.axis('equal')\n",
+    "\n"
+   ],
+   "id": "9764bd5accb77671",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    " ### Getting the stiffness matrix\n",
+    "\n",
+    "The membrane part of the integral in (8.20) is carried out here first."
+   ],
+   "id": "4a46abed5fcd9c56"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-02T15:26:37.655289Z",
+     "start_time": "2025-07-02T15:26:37.490240Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "%matplotlib notebook\n",
+    "\n",
+    "NG = 2  # number of gauss points in each direction\n",
+    "\n",
+    "def get_KI():\n",
+    "\n",
+    "    K_I = None  # Initialize the stiffness matrix\n",
+    "\n",
+    "    for i in range(1, NG + 1):\n",
+    "        for j in range(1, NG + 1):\n",
+    "            xi = gi_data[NG]['point'][i - 1]\n",
+    "            eta = gi_data[NG]['point'][j - 1]\n",
+    "            weight = gi_data[NG]['weight'][i - 1] * gi_data[NG]['weight'][j - 1]\n",
+    "\n",
+    "            # Calculate the jacobian at the gauss point\n",
+    "            J_gauss = J_substituted.subs({XI: xi, ETA: eta})\n",
+    "\n",
+    "            # Calculate the determinant of the jacobian\n",
+    "            det_J_gauss = J_gauss.det()\n",
+    "\n",
+    "            # Calculate the B^I and B^O matrices at the gauss point\n",
+    "            B_I_gauss = BI().subs({XI: xi, ETA: eta})\n",
+    "\n",
+    "            # Calculate the stiffness matrix contribution\n",
+    "            K_I_contribution = weight * det_J_gauss * (B_I_gauss.T * c * B_I_gauss)\n",
+    "\n",
+    "            try:\n",
+    "                K_I += K_I_contribution\n",
+    "            except TypeError:\n",
+    "                # If K_I is not defined, initialize it\n",
+    "                K_I = K_I_contribution\n",
+    "\n",
+    "    return K_I\n",
+    "\n",
+    "\n",
+    "def get_KO():\n",
+    "\n",
+    "    K_O = None  # Initialize the stiffness matrix\n",
+    "\n",
+    "    for i in range(1, NG + 1):\n",
+    "        for j in range(1, NG + 1):\n",
+    "            xi = gi_data[NG]['point'][i - 1]\n",
+    "            eta = gi_data[NG]['point'][j - 1]\n",
+    "            weight = gi_data[NG]['weight'][i - 1] * gi_data[NG]['weight'][j - 1]\n",
+    "\n",
+    "            # Calculate the jacobian at the gauss point\n",
+    "            J_gauss = J_substituted.subs({XI: xi, ETA: eta})\n",
+    "\n",
+    "            # Calculate the determinant of the jacobian\n",
+    "            det_J_gauss = J_gauss.det()\n",
+    "\n",
+    "            # Calculate the B^I and B^O matrices at the gauss point\n",
+    "            B_O_gauss = BO().subs({XI: xi, ETA: eta})\n",
+    "\n",
+    "            # Calculate the stiffness matrix contribution\n",
+    "            K_O_contribution = weight * det_J_gauss * (B_O_gauss.T * cs * B_O_gauss)\n",
+    "\n",
+    "            try:\n",
+    "                K_O += K_O_contribution\n",
+    "            except TypeError:\n",
+    "                # If K_O is not defined, initialize it\n",
+    "                K_O = K_O_contribution\n",
+    "\n",
+    "    return K_O\n",
+    "\n",
+    "\n",
+    "K = get_KI() + get_KO()\n",
+    "K = np.array(K.evalf()).astype(float)\n",
+    "\n",
+    "\n",
+    "eigvals, shapes = np.linalg.eig(K)\n",
+    "print([f'{eigval:.2e}' for eigval in sorted(eigvals)])"
+   ],
+   "id": "7d05d999099b125b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-1.40e-05', '7.94e+08', '6.65e+09', '1.63e+10', '2.10e+10', '4.24e+10', '5.50e+10', '6.41e+10', '8.20e+10', '1.61e+11', '1.80e+11', '5.61e+11']\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   }
  ],
  "metadata": {
