the Q4 element works

--- a/source/TwoD/Q4/Q4.ipynb
+++ b/source/TwoD/Q4/Q4.ipynb
@@ -1185,8 +1185,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T20:23:14.611113Z",
-     "start_time": "2025-07-23T20:23:14.603619Z"
+     "end_time": "2025-07-23T20:34:05.959371Z",
+     "start_time": "2025-07-23T20:34:05.945873Z"
     }
    },
    "cell_type": "code",
@@ -1198,7 +1198,18 @@
     "eigenvalues = np.linalg.eigvals(K_np)\n",
     "print()\n",
     "print('The eigenvalues of the stiffness matrix K are:')\n",
-    "print(sorted([float(x) for x in eigenvalues]))"
+    "eigenvalues = sorted([float(x) for x in eigenvalues])\n",
+    "\n",
+    "# the eigenvectors for the near-zero eigenvalues\n",
+    "nearzero_eigenvalues = [ev for ev in eigenvalues if abs(ev) < 1e-10]\n",
+    "eigenvectors = np.linalg.eig(K_np)[1]\n",
+    "# printing the eigenvectors for the near-zero eigenvalues\n",
+    "print('The eigenvectors for the near-zero eigenvalues are:')\n",
+    "for i, ev in enumerate(nearzero_eigenvalues):\n",
+    "    print(f'Eigenvalue {i + 1}: {ev:.6f}')\n",
+    "    print('Eigenvector:')\n",
+    "    print(eigenvectors[:, i])\n",
+    "    print()\n"
    ],
    "id": "5fb36ec01815dd73",
    "outputs": [
@@ -1208,11 +1219,27 @@
      "text": [
       "\n",
       "The eigenvalues of the stiffness matrix K are:\n",
-      "[0.0, 7.017089125156201e-12, 1.3632406299297611e-11, 97794.6229333333, 97794.62293333338, 159999.99999999994, 160000.0, 266666.66666666674]\n"
+      "The eigenvectors for the near-zero eigenvalues are:\n",
+      "Eigenvalue 1: 0.000000\n",
+      "Eigenvector:\n",
+      "[ 0.61237244 -0.20412415  0.61237244  0.20412415  0.20412415  0.20412415\n",
+      "  0.20412415 -0.20412415]\n",
+      "\n",
+      "Eigenvalue 2: 0.000000\n",
+      "Eigenvector:\n",
+      "[-0.35355339 -0.35355339  0.35355339 -0.35355339  0.35355339  0.35355339\n",
+      " -0.35355339  0.35355339]\n",
+      "\n",
+      "Eigenvalue 3: 0.000000\n",
+      "Eigenvector:\n",
+      "[-5.00000000e-01  1.28579416e-15  1.15610832e-15  5.00000000e-01\n",
+      "  5.00000000e-01 -1.33177788e-15 -1.80749427e-15 -5.00000000e-01]\n",
+      "\n",
+      "{x1: 3, y1: 2, x2: 5, y2: 2, x3: 5, y3: 4, x4: 3, y4: 4}\n"
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 57
   },
   {
    "metadata": {},
